--- a/package.json
+++ b/package.json
@@ -273,6 +273,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@hot-loader/react-dom": "^16.11.0",
+    "bootstrap": "^4.4.1",
     "connected-react-router": "^6.6.1",
     "core-js": "^3.6.4",
     "devtron": "^1.4.0",
@@ -281,6 +282,7 @@
     "electron-updater": "^4.2.0",
     "history": "^4.10.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
